[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wiwb"
description = "Python API to work with WIWB"
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
	{ name = "Renier Kramer", email = "renier.Kramer@hdsr.nl" }
]
license = { text = "MIT" }

requires-python = ">=3.7"
dependencies = [
    "geopandas",
	"xarray",
	"rasterio",
	"requests",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "wiwb.__version__" }

[tool.setuptools.packages.find]
include = ["wiwb"]

[project.urls]
Source = "https://github.com/d2hydro/wiwb"
